[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyhealthbox3"
version = "0.0.16"
authors = [
  { name="rmassch", email="1083135+rmassch@users.noreply.github.com" },
]
description = "Renson Healthbox3 Package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "aiohttp"
]
[project.urls]
"Homepage" = "https://github.com/rmassch/pyhealthbox3"
"Bug Tracker" = "https://github.com/rmassch/pyhealthbox3/issues"